Revision history for Perl extension Inline::Java
------------------------------------------------
0.49  
    - Added PerlInterpreter: require/eval Perl code directly from Java
    - Renamed PerlNatives stuff
    - Split and updated documentation
    - Applied JNI memory leak patch by Jeff Janes

0.47  Sat Feb 14 10:00:00 EST 2004
    - Fixed bugs in portability code and added HPUX, AIX and Solaris specifics
    - Tweaked CLASSPATH directory order
	- Changed port numbers for SHARED_JVM tests in order to avoid clashes
      with running installations
    - Made PerlNatives optional
    
0.46  Web Feb 04 20:00:00 EST 2004
    - Fixed Natives.xs to work with ExtUtils::ParseXS

0.45  Fri Jan 30 20:00:00 EST 2004
    - Fixed Makefile.PL arguments that were getting lost
    - Fixed deprecated require call
    - Fixed support for symbolic links in J2SDK directory
    - Basic support for J2SDK 1.5
    - Added new experimental feature: PerlNatives

0.44  Sun Nov 23 15:47:06 EST 2003
    - Callbacks from multiple threads are now supported
    - Refactored (again...) studying/.jdat/cache stuff
    - Added PRIVATE mode for use with SHARED_JVM
    - Added DEBUGGER mode that launches jdb
    - Fixed memory leak in JNI code (patch submitted by Dave Blob)

0.43  Tue Oct 14 13:18:25 EDT 2003
    - Restored $VERSION in each .pm file
    - Inline::Java now formerly requires Perl 5.6

0.42  Fri Sep  5 13:18:25 EDT 2003
    - Fixed more CLASSPATH issues. CLASSPATH now works like this:
      * CLASSPATH environment variable is global
      * CLASSPATH configuration option is local to the user class loader
    - Added method cache to increase performance and decrease reflection 
      API calls
    - Altered and documented the study_classes() function
    - Added EXTRA_JAVA_ARGS and EXTRA_JAVAC_ARGS config options

0.41  Mon Jul 14 13:18:25 EDT 2003
    - Fixed CLASSPATH bug
    - Possibly (!) fixed test suite problems under heavy load

0.40  Fri Apr 11 11:00:00 EST 2003