@@ -2,6 +2,6 @@ package Inline::Java::PerlNatives ;
 
 use strict ;
 
-$Inline::Java::PerlNatives::VERSION = '0.48_91' ;
+$Inline::Java::PerlNatives::VERSION = '0.48_92' ;
 
 1 ;
