@@ -71,6 +71,7 @@ Inline::Java version 0.49 is a major upgrade that includes:
     - Renamed PerlNatives stuff
     - Split and updated documentation
     - Applied JNI memory leak patch by Jeff Janes
+    - Added external command line tool to start/stop a SHARED_JVM server
 
 
 See CHANGES for a full change list.
